<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">RideSo</string>
    <string name="app_id">260804040793784</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_create_group">New Group</string>
    <string name="title_activity_group_detail">Group</string>
    <string name="title_activity_add_users">Add People</string>
    <string name="title_activity_view_profile">Loading Profile</string>
    <string name="title_activity_chat">Group Chat</string>

    <!-- Profile Activity strings -->
    <string name="first_name_hint"><i>First Name</i></string>
    <string name="last_name_hint"><i>Last Name</i></string>
    <string name="home_address_hint"><i>Home Address</i></string>
    <string name="work_address_hint"><i>Work Address</i></string>
    <string name="phone_hint"><i>Phone Number</i></string>
    <string name="personal_email_hint"><i>Personal Email</i></string>
    <string name="email_hint"><i>Work Email</i></string>
    <string name="done_btn_text"><i>Done</i></string>
    <string name="verify_email_btn_text"><i>Verify</i></string>
    <string name="icon_car">&#xf1b9;</string>
    <string name="icon_group">&#xf0c0;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_times">&#xf00d;</string>
    <string name="icon_repeat">&#xf01e;</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_microphone">&#xf130;</string>
    <string name="icon_headphone">&#xf025;</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
